# aqtinstall

./: .flake8  .gitattributes  .gitignore  .readthedocs.yml  .reviewdog.yml  .travis.yml  AUTHORS  CHANGELOG.rst  CHANGELOG_prereleases.rst  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTE.rst  LICENSE  MANIFEST.in  README.md  README.rst  SECURITY.rst  aqtinst  azure-pipelines.yml  generate_azure_pipelines_matrices.py  generate_azure_pipelines_yml.py  pyproject.toml  qli-installer  qli-installer.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  document-error.md  document-error.yml  feature_request.md  feature_request.yml
.github/workflows/: build-standalone.yml  check-and-unittest.yml  check-combinations.yml  check-docs.yml  check.yml  codeql-analysis.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  release-note.yml  run-linter.yml  snyk.yml  stale.yml  test-action.yml  test-install-qt.yml  test-old-version.yml  upload-release-artifacts.yml
aqt/: __init__.py  __main__.py  archives.py  cli.py  combinations.json  commercial.py  cuteci.py  exceptions.py  helper.py  install-qt.qs  installer.py  logging.ini  logging.yml  logutils.py  metadata.py  metalink.py  qtpatch.py  qtrequests.py  repository.py  settings.ini  settings.py  updater.py
aqt/requests/: __init__.py  exceptions.py  mirrors.py
ci/: accelbubble.7z  azure-pipelines.tmpl.yml  build_standalone.bat  build_standalone.py  generate_azure_pipelines_matrices.py  generate_combinations.py  helloworld_qttools.7z  jom-md5sums.txt  logging.ini  openglwindow_qt6.7z  redditclient.7z  reviewdog_install.sh  settings.ini  steps.yml
ci/accelbubble/: Info.plist  accelbubble.pro
ci/helloworld_qttools/: hello.pro  main.cpp
ci/redditclient/: redditclient.pro  redditmodel.cpp  redditwrapper.cpp
ci/redditclient_qt5/: main.cpp  redditmodel.h  redditwrapper.cpp  redditwrapper.h
docs/: CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTE.rst  Makefile  SECURITY.rst  appendix.rst  authors.rst  available_versions.rst  changes.rst  cli.rst  commercial.rst  conf.py  configuration.rst  devguide.rst  getting_started.rst  index.rst  installation.rst  internals.rst  make.bat  official.rst  previous_changes.rst  requirements.txt
docs/locale/.doctrees/: CODE_OF_CONDUCT.doctree  CONTRIBUTE.doctree  SECURITY.doctree  authors.doctree  changes.doctree  cli.doctree  configuration.doctree  environment.pickle  getting_started.doctree  index.doctree  installation.doctree
docs/locale/ja/LC_MESSAGES/: CODE_OF_CONDUCT.po  CONTRIBUTE.po  SECURITY.po  authors.po  changes.po  cli.po  configuration.po  getting_started.po  index.po  installation.po
docs/locale/pot/: CODE_OF_CONDUCT.pot  CONTRIBUTE.pot  SECURITY.pot  authors.pot  changes.pot  cli.pot  configuration.pot  getting_started.pot  index.pot  installation.pot
tests/: accelbubble.7z  conftest.py  helloworld.7z  openglwindow.7z  test_archives.py  test_cli.py  test_commercial.py  test_connection.py  test_doc_archives.py  test_helper.py  test_install.py  test_list.py  test_metadata.py  test_tools_archives.py  test_updater.py
tests/data/: .gitattributes  all_os-6101-wasm-single-update.xml  all_os-673-wasm-multi-expect.json  all_os-673-wasm-multi-update.xml  all_os-673-wasm-single-expect.json  all_os-673-wasm-single-update.xml  all_os-680-wasm-multi-expect.json  all_os-680-wasm-multi-update.xml  all_os-680-wasm-single-expect.json  all_os-680-wasm-single-update.xml  all_os-681-src-doc-example-expect.json  all_os-681-src-doc-example-update.xml  linux-6101-desktop-update.xml  linux-680-desktop-expect.json  linux-680-desktop-update.xml  linux-android.html  linux-desktop-expect.json  linux-desktop.html  linux_arm64-desktop-expect.json  linux_arm64-desktop.html  mac-6101-desktop-update.xml  mac-680-desktop-update.xml  mac-android-expect.json  mac-android.html  mac-desktop-expect.json  mac-desktop-sdktool-expect.json  mac-desktop-sdktool-update.xml  mac-desktop-tools_cmake-expect.json  mac-desktop-tools_cmake-update.xml  mac-desktop-tools_ifw-expect.json  mac-desktop-tools_ifw-tools_ifw_47-update.xml  mac-desktop-tools_ifw-tools_ifw_48-update.xml  mac-desktop-tools_ifw-update.xml  mac-desktop-tools_ifw.html  mac-desktop-tools_qtcreator-expect.json  mac-desktop-tools_qtcreator-update.xml  mac-desktop-tools_qtdesignstudio-expect.json  mac-desktop-tools_qtdesignstudio-update.xml  mac-desktop-tools_qtdesignstudio.html  mac-desktop.html  (+38 more)
tests/helloworld/: hello.pro  main.cpp
tests/redditclient/: main.cpp  redditclient.pro  redditmodel.cpp  redditmodel.h  redditwrapper.cpp  redditwrapper.h
tests/redditclient/doc/src/: qtnetworkauth-redditclient.qdoc
tools/: build_standalone.py  launch_aqt.py
