[flake8]
max-line-length = 125
exclude = .git,__pycache__,docs/conf.py,build,dist,tmp,venv

[bdist_wheel]
universal=1

[metadata]
name = aqtinstall
description = Another unofficial Qt installer
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
license = MIT
author = Hiroshi Miura
author_email = miurahr@linux.com
url = http://github.com/miurahr/aqtinstall
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: C++
    Topic :: Software Development
    Topic :: Software Development :: Libraries

[options]
install_requires =
    requests
    wheel
    py7zr>=0.5.2,<0.6
    packaging
setup_requires =
    setuptools-scm[toml]>=3.3.3
    setuptools>=42.0
packages = aqt

[options.entry_points]
console_scripts =
    aqt = aqt.__main__:main

[options.package_data]
aqt = *.yml, *.json, *.ini

[options.extras_require]
dev =
    pytest
    pytest-pep8
    pytest-cov
    flake8
