[flake8]
max-line-length = 125
exclude = .git,__pycache__,docs/conf.py,build,dist,tmp,venv

[bdist_wheel]
universal=1

[metadata]
name = aqtinstall
description = Another unofficial Qt installer
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
author = Hiroshi Miura
author_email = miurahr@linux.com
url = http://github.com/miurahr/aqtinstall
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: C++
    Topic :: Software Development
    Topic :: Software Development :: Libraries

[options]
python_requires = >= 3.6
install_requires =
    importlib-metadata;python_version<"3.8"
    requests
    py7zr>=0.15.1
    packaging
    texttable
setup_requires =
    setuptools-scm[toml]>=6.0.1
    setuptools>=45.0
packages = aqt

[options.entry_points]
console_scripts =
    aqt = aqt.__main__:main

[options.package_data]
aqt = *.yml, *.json, *.ini

[options.extras_require]
test =
    pytest
    pytest-pep8
    pytest-remotedata
    pytest-cov
check =
    flake8
    flake8-black
    flake8-colors
    flake8-isort
    flake8-pyi
    flake8-typing-imports
    docutils
    check-manifest
    readme-renderer
    pygments
    packaging
docs =
    sphinx>=1.8
    sphinx_rtd_theme
    sphinx-py3doc-enhanced-theme
