[metadata]
name = aqtinstall
description = Another unofficial Qt installer
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
author = Hiroshi Miura
author_email = miurahr@linux.com
url = http://github.com/miurahr/aqtinstall
project_urls =
    Documentation = https://aqtinstall.readthedocs.io/
    Bug Tracker = https://github.com/miurahr/aqtinstall/issues
    Wiki = https://github.com/miurahr/aqtinstall/wiki
    Source = https://github.com/miurahr/aqtinstall
    Changelog = https://github.com/miurahr/aqtinstall/blob/master/CHANGELOG.rst
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: C++
    Topic :: Software Development
    Topic :: Software Development :: Libraries

[options]
python_requires = >= 3.6
install_requires =
    requests
    semantic_version
    patch>=1.16
    py7zr>=0.18.3
    texttable
    bs4
    dataclasses;python_version<"3.7"
    defusedxml
    humanize
setup_requires =
    setuptools-scm[toml]>=6.4
    setuptools>=61
packages = aqt

[options.entry_points]
console_scripts =
    aqt = aqt.__main__:main

[options.package_data]
aqt = *.yml, *.json, *.ini

[options.extras_require]
test =
    pytest
    pytest-pep8
    pytest-remotedata
    pytest-cov
    pytest-socket
    pytest-leaks
    pympler
check =
    flake8
    flake8-black
    flake8-colors
    flake8-isort
    flake8-pyi
    flake8-typing-imports
    docutils
    check-manifest
    readme-renderer
    pygments
    packaging
docs =
    sphinx>=2.3
    sphinx_rtd_theme
    sphinx-py3doc-enhanced-theme
